# website

./: .editorconfig  Cargo.toml  LICENSE  index.html  run.sh  vercel.json
src/: lib.rs  main.rs  style.css
src/components/: project_card.rs
src/pages/: contact.rs  home.rs  mod.rs  not_found.rs  projects.rs
