[package]
name = "website"
description = "My personal website / portfolio / resume / etc."
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Rohan-Bharatia/website"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = "0.3"
js-sys = "0.3"

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[lib]
crate-type = ["cdylib"]
